2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in:
	* translation-teams.xml.in: Update more data.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.__init__): Fix handling of releases without categories.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in: Update Bengali data.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Priority to SVNWEB.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.py (get_roles_for):
	* templates/person.tmpl:
	Display obscured email address.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Updated mk entry.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in:
	Updated.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Update zh_HK team to list both zh_HK
	and zh_TW.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* teams.py: Fix langid setting for teams.

	* translation-teams.xml.in: Update vi, sl, ar team's data.
	* people.xml.in: Update pclouds' name, add Matic Žgur, Djihed Afifi.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.doc_l10n_stats): Use 'potbase'
	for translations as well.
	(LocStatistics.__init__): Default to SVN.

	* view-module.py (go_go): Use 'potbase' and correctly check for
	empty potfiles.
	* templates/show-stats.tmpl: Show 'updated' only if available.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Use svnweb.

	* gnome-modules.xml.in: Added docs for gconf-editor,
	gnome-utils, bug-buddy, gdm2, gnome-keyring-manager,
	gnome-system-tools, gnome-panel, sound-juicer, gnome-desktop.
	Added gfloppy, release-notes modules.

	* releases.py (Releases.list_modules): Set svnmodule.

	* gnome-modules.xml.in: Updated.
	* releases.xml.in: Update data.

	* gnome-modules.xml.in: Switch to SVN.

2007-01-01  Danilo Šegan  <danilo@gnome.org>
