@@ -20,6 +20,7 @@
     #end if
 
     #for docdir, document in $module.documents.items()
+    #if $document.pot_size
      #if $document.pot_size==$document.untranslated
        #set POFILE=$webroot+"/POT/"+$moduleid+"."+$module.branch+"/docs/"+$document.potbase+"."+$module.branch+".pot"
        #set POINFO=$document.pot_messages
@@ -59,6 +60,7 @@
           </div>
         </td>
      </tr>
+    #end if
     #end for
    #end if
  
