@@ -1,5 +1,7 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* templates/language-release-doc-stats-modules.tmpl: Don't list non-existing templates.
+
 	* gnome-modules.xml.in:
 	* translation-teams.xml.in: Update more data.
 
